# Dedinski

./: .gitignore  CMakeLists.txt  log.cpp  log.h  main.cpp  stack.cpp  stack.h  stack_config.h
huawei/STL_functions_implementation/: CMakeLists.txt  MySTL.cpp  MySTL.h  main.cpp
huawei/Stack/: main.cpp
huawei/strings_and_files/: CMakeLists.txt  IO.cpp  IO.h  main.cpp  poem.txt  poem_original.txt  poem_rev_sorted.txt  poem_sorted.txt  sort.cpp  sort.h
summer_2022/task_1 quadratic equation/: IO.cpp  IO.h  Solution.cpp  solver.cpp  solver.h
summer_2022/task_1_quadratic_equation/: CMakeLists.txt  IO.cpp  IO.h  README.md  Solution.cpp  roots_amount.h  solver.cpp  solver.h  test_cases.txt  test_cases_answers.txt  unit_test.cpp  unit_test.h
